--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.0.1
   provider: ^6.0.0
   get: ^4.6.6
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
